--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -1,69 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends '../partial/base.html' %}
+{% set path = 'users' %}
+{% set title = 'Arte Manifiesto | Artistas' %}
+{% set css = 'discover-artists' %}
 
-	<title>Arte Manifiesto | Artistas</title>
-
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Roboto+Condensed:400,300,700|Raleway:400,100,200,300,500,700,600,800,900|Oswald:400,300,700|Hammersmith+One' rel='stylesheet' type='text/css'>
-
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-	<link rel="stylesheet" type="text/css" href="/css/discover-artists.css">
-
-</head>
-<body>
-
-	<!-- ********************************************************************
-		$ HEADER
-	********************************************************************* -->
-	<!-- <header class="header">
-		<a class="logo" href="/">
-			<img class="logo__small" src="/img/logo-small.png">
-			<img class="logo__normal" src="/img/logo.png">
-		</a>
-		<nav class="skinny-menu" data-icon='true'>
-			<a  class="skinny-menu__item active" href="/works/category/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-search"></i>
-				<span class="skinny-menu__item__text">Descubre</span>
-			</a>
-			<a href="#" class="skinny-menu__item">
-				<i class="skinny-menu__item__icon fa fa-diamond"></i>
-				<span class="skinny-menu__item__text">Market</span>
-			</a>
-			<a class="skinny-menu__item js-signInButton">
-				<i class="skinny-menu__item__icon fa fa-user"></i>
-				<span class="skinny-menu__item__text">Sign in</span>
-			</a>
-		</nav>
-	</header> -->
-	<header class="header">
-		<a class="logo" href="/">
-			<img class="logo__small" src="/img/logo-small.png">
-			<img class="logo__normal" src="/img/logo.png">
-		</a>
-		<nav class="skinny-menu" data-icon='true'>
-			<a class="skinny-menu__item" href="/works/category/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
-				<span class="skinny-menu__item__text">Obras</span>
-			</a>
-			<a class="skinny-menu__item active" href="/users/specialty/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
-				<span class="skinny-menu__item__text">Artistas</span>
-			</a>
-			<a class="skinny-menu__item" href="/products/type/all/page-1/">
-				<i class="skinny-menu__item__icon fa fa-diamond"></i>
-				<span class="skinny-menu__item__text">Market</span>
-			</a>
-			<a class="skinny-menu__item js-signInButton">
-				<i class="skinny-menu__item__icon fa fa-user"></i>
-				<span class="skinny-menu__item__text">Sign in</span>
-			</a>
-		</nav>
-	</header>
-
+{% block content %}
 
 	<!-- ********************************************************************
 		$ SLOGAN
@@ -351,308 +291,4 @@
 
 	<script src="/js/discover-artists.js"></script>
 
-</body>
-</html>
-
-
-			<!-- 
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist1.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist2.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<a class="button-liner disabled" data-size='small' href="#">
-							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-							<span class="button-liner__number">13,2k</span>
-						</a>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist3.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<div class="button-liner disabled" data-size='small'>
-							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-							<span class="button-liner__number">13,2k</span>
-						</div>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist4.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist1.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist2.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<a class="button-liner disabled" data-size='small' href="#">
-							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-							<span class="button-liner__number">13,2k</span>
-						</a>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist3.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<div class="button-liner disabled" data-size='small'>
-							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-							<span class="button-liner__number">13,2k</span>
-						</div>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist4.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist1.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist2.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<a class="button-liner disabled" data-size='small' href="#">
-							<span class="button-liner__action"><i class="fa fa-check"></i> Siguiendo</span>
-							<span class="button-liner__number">13,2k</span>
-						</a>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist3.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work1"></div>
-							<div class="work work2"></div>
-							<div class="work work3"></div>
-							<div class="work work4"></div>
-							<div class="work work5"></div>
-							<div class="work work6"></div>					
-					</div>
-					<div class="artist-follow">
-						<div class="button-liner disabled" data-size='small'>
-							<span class="button-liner__action"><i class="fa fa-times-circle"></i> Cancelar</span>
-							<span class="button-liner__number">13,2k</span>
-						</div>
-					</div>
-				</article>
-				<article class="artist">
-					<a class="artist-header" href="#">
-						<div class="avatar">
-							<img src="/img/artists/artist4.jpg">
-						</div>
-						<div class="info">
-							<p class="high-text" data-size='small'>keri Russell</p>
-							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-						</div>
-					</a>
-					<div class="artist-works">
-							<div class="work work7"></div>
-							<div class="work work8"></div>
-							<div class="work work9"></div>
-							<div class="work work10"></div>
-							<div class="work work11"></div>
-							<div class="work work12"></div>					
-					</div>
-					<div class="artist-follow">
-						<button class="button-liner" data-size='small'>
-							<span class="button-liner__action">Seguir</span>
-							<span class="button-liner__number">13,2k</span>
-						</button>
-					</div>
-				</article> -->
+{% endblock %}
