--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,48 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends 'partial/base.html' %}
+{% set path = 'index' %}
+{% set title = 'Arte Manifiesto' %}
+{% set css = 'index' %}
 
-	<title>Arte Manifiesto</title>
-	
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Roboto+Condensed:400,300,700|Raleway:400,100,200,300,500,700,600,800,900|Oswald:400,300,700|Hammersmith+One' rel='stylesheet' type='text/css'>
-
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-
-</head>
-<body>
-
-	<!-- ********************************************************************
-		$ HEADER
-	********************************************************************* -->
-	<header class="header">
-		<a class="logo" href="/">
-			<img class="logo__small" src="/img/logo-small.png">
-			<img class="logo__normal" src="/img/logo.png">
-		</a>
-		<nav class="skinny-menu" data-icon='true'>
-			<a class="skinny-menu__item" href="/works/category/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
-				<span class="skinny-menu__item__text">Obras</span>
-			</a>
-			<a class="skinny-menu__item" href="/users/specialty/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
-				<span class="skinny-menu__item__text">Artistas</span>
-			</a>
-			<a class="skinny-menu__item" href="/products/type/all/page-1/">
-				<i class="skinny-menu__item__icon fa fa-diamond"></i>
-				<span class="skinny-menu__item__text">Market</span>
-			</a>
-			<a class="skinny-menu__item js-signInButton">
-				<i class="skinny-menu__item__icon fa fa-user"></i>
-				<span class="skinny-menu__item__text">Sign in</span>
-			</a>
-		</nav>
-	</header>
+{% block content %}
 
 	<!-- ********************************************************************
 		$ CATEGORY MENU
@@ -207,14 +168,10 @@
 	********************************************************************* -->
 	<section class="login-modal">
 		<div class="login-box js-loginBox">
-			<header class="login-box__header">			
+			<header class="login-box__header">
 				<div class="skinny-menu">
-					<a href="#" class="skinny-menu__item js-signInFormButton">
-						Ingresar
-					</a>
-					<a href="#" class="skinny-menu__item js-signUpFormButton">
-						Registrarme
-					</a>
+					<a href="#" class="skinny-menu__item js-signInFormButton">Ingresar</a>
+					<a href="#" class="skinny-menu__item js-signUpFormButton">Registrarme</a>
 				</div>
 			</header>
 			<form class="login-box__form js-signUpForm">
@@ -274,34 +231,9 @@
 
 	<script src="/js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/salvattore.js"></script>
-	
 	<script src="js/vendor/hammer.min.js"></script>
 
 	<script src="js/lib/login.js"></script>
 	<script src="js/lib/slider.js"></script>
 
-	<script type="text/javascript">
-		// window.workFeatureds = {{ workFeatureds|json|safe }};
-		// console.log('workFeatureds: ', workFeatureds)
-	</script>
-
-</body>
-</html>
-
-	<!-- {% include "../views/partial/header.html"%} -->
-
-	<!-- <section class="works-menu">
-		<p class="medium-text">Obras recomendadas</p>
-		<a class="button-link" href="#">ver todas <i class="fa fa-angle-right"></i></a>
-	</section>
-
-	<section class="works" data-columns>
-		{% for workFeatured in workFeatureds %}
-			<a href="#" class="work">
-				<img src="{{ workFeatured.photo }}">
-			</a>
-    {% endfor %}
-	</section>
-
-	<section class="login-modal">
-	</section> -->
+{% endblock %}
