--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -81,3 +81,18 @@
 		transform translate(0, -50%)
 		left .75em
 		color gray
+
+
+/*------------------------------------*
+	$ DOUBLE RANGE
+*------------------------------------*/
+.double-range
+	// background rgba(green, .5)
+	&__slider
+		padding-bottom .25rem
+	&__values
+		// background rgba(yellow, .5)
+		display flex
+		justify-content space-between
+	// &__value
+		// padding .5rem
