--- a/public/stylus/objects/filters.styl
+++ b/public/stylus/objects/filters.styl
@@ -50,6 +50,9 @@
 		background white
 		transition transform .5s
 		z-index 1
+		box-shadow rgba(0,0,0,0.35) 0 0 10px
+		border 1px solid #eee
+		
 		&.right
 			right 0
 			transform translate(100%, 0)
@@ -91,3 +94,5 @@
 		cursor pointer
 		&.selected
 			background rgba(black, .1)
+	&__price
+		padding 1rem .5rem
