--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -354,6 +354,23 @@ html {
   left: 0.75em;
   color: #808080;
 }
+.double-range__slider {
+  padding-bottom: 0.25rem;
+}
+.double-range__values {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
 .slogan {
   padding: 1rem;
   text-align: center;
@@ -703,6 +720,9 @@ html {
   -ms-transition: -ms-transform 0.5s;
   transition: transform 0.5s;
   z-index: 1;
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  border: 1px solid #eee;
 }
 .works-container__filters.right {
   right: 0;
@@ -767,4 +787,7 @@ html {
 }
 .filters .filter.selected {
   background: rgba(0,0,0,0.1);
+}
+.filters__price {
+  padding: 1rem 0.5rem;
 }
